--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:900');
 
-$bg: #3c3c3c;
-$white: #fff;
-$black: #202121;
+bg: #3c3c3c;
+white: #fff;
+black: #202121;
 
 @mixin transition($property: all, $duration: 0.5s, $ease: cubic-bezier(0.65,-0.25,0.25, 1.95)) {
   transition: $property $duration $ease;
@@ -40,12 +40,12 @@ button {
   &..CButton {
     @include transition(all, 0.5s, cubic-bezier(0.65,-0.25,0.25,1.95));
     font-weight: 900;
-    color: $black;
+    color: black;
     text-align: center;
     padding: 1.25rem 2rem;
-    background: $white;
+    background: white;
     text-transform: uppercase;
-    &:hover, &:focus, &:active {
+    :hover, :focus, :active {
       letter-spacing: 0.125rem;
     }
   }
