--- a/style.css
+++ b/style.css
@@ -1,67 +1,19 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:900');
+button{
+    padding:0.6em 2em; 
+    padding:0.6em 2em;
+    border-radius: 8px;
+    color:#fff;
+    background-color:#1976d2;
+    font-size:1.1em;
+    border:0;
+    cursor:pointer;
+     margin:1em;
 
-bg: #3c3c3c;
-white: #fff;
-black: #202121;
+ }
 
-@mixin transition($property: all, $duration: 0.5s, $ease: cubic-bezier(0.65,-0.25,0.25, 1.95)) {
-  transition: $property $duration $ease;
-}
+ .CButton
+ {
+   text-align: center;
+ }
 
-* {
-  box-sizing: border-box;
-  &::before, &::after {
-    box-sizing: border-box;
-  }
-}
-
-body {
-  font-family: 'Roboto', sans-serif;
-  font-size: 1rem;
-  line-height: 1.5;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  min-height: 100vh;
-  background: $bg;
-}
-
-button {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-  outline: none;
-  border: 0;
-  vertical-align: middle;
-  text-decoration: none;
-  font-size: inherit;
-  font-family: inherit;
-  &..CButton {
-    @include transition(all, 0.5s, cubic-bezier(0.65,-0.25,0.25,1.95));
-    font-weight: 900;
-    color: black;
-    text-align: center;
-    padding: 1.25rem 2rem;
-    background: white;
-    text-transform: uppercase;
-    :hover, :focus, :active {
-      letter-spacing: 0.125rem;
-    }
-  }
-}
-
-@supports (display: grid) {
-  body {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 0.625rem;
-    grid-template-areas: ". main main ." ". main main .";
-  }
-  
-  #container {
-    grid-area: main;
-    align-self: center;
-    justify-self: center;
-  }
-}
+ 
