--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
 
 
 button{
-    padding:0.6em 2em; 
-    padding:0.6em 2em;
-    border-radius: 8px;
-    color:#fff;
-    background-color:#1976d2;
+    padding:2px; 
+    border-radius: 10px;
+    color: black;
+    background-color: white;
     font-size:1.1em;
     border:0;
     cursor:pointer;
-     margin:1em;
+    margin:1em;
 
  }
 
