--- a/style.css
+++ b/style.css
@@ -1,15 +1,59 @@
 
 
-button{
-    padding:30px 150px 30px 150px; 
-    border-radius: 2px;
-    color: black;
-    background-color: white;
-    font-size:60px;
-    border:solid 10px gray;
-    cursor:pointer;
-    margin:50px;
-    font-family: 'Roboto';
+#Women{
+
+
+   border: 2px solid #000000;
+   box-sizing: border-box; 
+
+   position: absolute;
+   left: 0.96%;
+   right: 37.32%;
+   top: 1.89%;
+   bottom: 45.28%;
+   
+   font-family: Roboto;
+   font-style: normal;
+   font-weight: 900;
+   font-size: 18px;
+   line-height: 89px;
+   /* or 494% */
+   
+   display: flex;
+   align-items: center;
+   text-align: center;
+   letter-spacing: 0.275em;
+   text-transform: uppercase;
+   
+   color: #000000;
+   
+ }
+
+ #Men{
+
+   border: 2px solid #000000;
+   box-sizing: border-box;
+
+   position: absolute;
+   left: 0.96%;
+   right: 37.32%;
+   top: 1.89%;
+   bottom: 45.28%;
+
+   font-family: Roboto;
+   font-style: normal;
+   font-weight: 900;
+   font-size: 18px;
+   line-height: 89px;
+   /* or 494% */
+
+   display: flex;
+   align-items: center;
+   text-align: center;
+   letter-spacing: 0.275em;
+   text-transform: uppercase;
+
+   color: #000000;
 
  }
   
@@ -21,11 +65,8 @@ button{
 
  .title{
    position: absolute;
-   width: 964px;
-   height: 129px;
-   left: 0px;
-   top: 0px;
-   
+   height: 212px;
+
    background: #000000;
  }
 
@@ -84,4 +125,3 @@ button{
 
  }
     
- 
