--- a/style.css
+++ b/style.css
@@ -65,8 +65,11 @@
 
  .title{
    position: absolute;
-   height: 212px;
-
+   left: 0%;
+   right: 0%;
+   top: 0%;
+   bottom: 0%;
+   
    background: #000000;
  }
 
