--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 button{
    padding:30px 150px 30px 150px; 
    border-radius: 2px;
@@ -10,75 +8,27 @@ button{
    cursor:pointer;
    margin:50px;
    font-family: 'Roboto';
+
 }
-  
- .CButton
- {
+ 
+.CButton
+{
+  text-align: center;
+     
+}
+
+.title{
+   background-color: Grey;
+   padding: 20px;
+}
+
+#GenderTXT{
    text-align: center;
-      
- }
-
- .title{
-   position: absolute;
-   left: 0%;
-   right: 0%;
-   top: 0%;
-   bottom: 72.4%;
-
-background: #000000;
- }
-
- #Style4U{
-
-    position: absolute;
-    left: 24.01%;
-    right: 24.01%;
-    top: 10.16%;
-    bottom: 84.9%;
-    
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 48px;
-    line-height: 100px;
-    /* or 208% */
-    
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.32em;
-    text-transform: uppercase;
-    
-    color: #FFFFFF;
-
+   font-family: 'Roboto';
+   color: white;
+   font-size: 50px;
+    padding:1px; 
+    margin: 1px 5px 100px 5px ;
    
-
- }
-
- #GenderTXT{
-    /* STYLE FOR EVEYONE */
-
-    position: absolute;
-    left: 40.78%;
-    right: 40.78%;
-    top: 16.41%;
-    bottom: 80.6%;
-    
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 13px;
-    line-height: 100px;
-    /* or 769% */
-    
-    display: flex;
-    align-items: center;
-    text-align: center;
-    letter-spacing: 0.16em;
-    text-transform: uppercase;
-    
-    color: #FFFFFF;
-    
-
- }
-    
+}
+   
