Borders of The Buttons are now black

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ button{
    color: black;
    background-color: white;
    font-size:60px;
-   border:solid 10px gray;
+   border:solid 10px black;
    cursor:pointer;
    margin:50px;
    font-family: 'Roboto';
